[package]
name = "Helper"
version = "0.1.0"
edition = "2024"


[dependencies]
futures = "0.3.31"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
termimad = "=0.2.1"
tokio = { version = "1.0", features = ["full"] }
serde_json = "1.0"
futures-util = "0.3.31"
